feat: typescript support

--- a/src/wc-lit-element/templates/static/demo/index.html
+++ b/src/wc-lit-element/templates/static/demo/index.html
@@ -1,29 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <style>
-    body {
-      background: #fafafa;
-    }
-  </style>
-</head>
-<body>
-  <div id="demo"></div>
+  <head>
+    <meta charset="utf-8" />
+    <style>
+      body {
+        background: #fafafa;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="demo"></div>
 
-  <script type="module">
-    import { html, render } from 'lit';
-    import '../define/<%= tagName %>.js';
+    <script type="module">
+      import { html, render } from 'lit';
+      import '../define/<%= tagName %>.js';
 
-    const heading = 'Hello owc World!';
-    render(
-      html`
-        <<%= tagName %> .heading=${heading}>
-          some light-dom
-        </<%= tagName %>>
-      `,
-      document.querySelector('#demo')
-    );
-  </script>
-</body>
+      const heading = 'World!';
+      render(
+        html`<<%= tagName %> .heading=${heading}>some light-dom</<%= tagName %>>`,
+        document.querySelector('#demo'),
+      );
+    </script>
+  </body>
 </html>
