--- a/src/wc-lit-element/templates/static/demo/index.html
+++ b/src/wc-lit-element/templates/static/demo/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Demo <%= tagName %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
       body {
@@ -17,10 +19,10 @@
 
       const heading = 'World!';
       render(
-        html`<pe-pe
+        html`<<%= tagName %>
           @counter-changed="${ev => console.log('==>', ev.detail)}"
           .heading=${heading}
-          >some light-dom</pe-pe
+          >some light-dom</<%= tagName %>
         >`,
         document.querySelector('#demo'),
       );
