--- a/src/wc-lit-element-ts/templates/static/demo/index.html
+++ b/src/wc-lit-element-ts/templates/static/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo <%= tagName %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="<%= tagName %>">
     <style>
       body {
         background: #fafafa;
