--- a/src/wc-lit-element/templates/static/demo/index.html
+++ b/src/wc-lit-element/templates/static/demo/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Demo <%= tagName %></title>
+    <title>Demo - <%= tagName %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta name="description" content="<%= tagName %>">
+    <meta name="description" content="<%= tagName %>" />
     <style>
+      html,
       body {
-        background: #fafafa;
+        height: 100%;
+        margin: 0;
+        font-family: sans-serif;
       }
     </style>
   </head>
