--- a/src/wc-lit-element/templates/static/demo/index.html
+++ b/src/wc-lit-element/templates/static/demo/index.html
@@ -4,7 +4,7 @@
     <title>Demo - <%= tagName %></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="<%= tagName %>" />
     <style>
       html,
