--- a/src/wc-lit-element/templates/static/demo/index.html
+++ b/src/wc-lit-element/templates/static/demo/index.html
@@ -20,7 +20,7 @@
 
     <script type="module">
       import {html, render} from 'lit';
-      import '../define/<%= tagName %>.js';
+      import '../src/define/<%= tagName %>.js';
 
       const heading = 'World!';
       render(
