chore: update dependencies

--- a/src/common-repo/templates/static/demo/index.html
+++ b/src/common-repo/templates/static/demo/index.html
@@ -4,7 +4,7 @@
     <title>Demo - <%= tagName %></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:image/x-icon;base64,B" />
+    <link rel="icon" href="data:," />
     <meta name="description" content="<%= tagName %>" />
     <style>
       html,
